objects/pepJumio_Credentials__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>pepActive_API_secret_c__c</fullName>
        <label>Active API secret</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepEnd_Point__c</fullName>
        <label>End Point</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepMerchant_API_token__c</fullName>
        <label>Merchant API token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Jumio Credentials</label>
</CustomObject>